<resources>
    <string name="app_name">Inventaris App</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="register_info">Create your account to start journey</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Alredy Have Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="login_info">Login to continue your journey</string>
    <string name="welcome_back">Welcome Back,</string>

    <string name="positive_button_register">Login</string>
    <string name="positive_button_failed">Coba lagi</string>
    <string name="positive_button_login">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus_add_product">+ Add Product</string>
    <string name="greeting1">Hi,</string>
    <string name="welcome">Welcome</string>
    <string name="add_product">Add Product</string>
    <string name="history">History</string>
    <string name="nama_product">Nama Product</string>
    <string name="date">20/20/2020</string>
    <string name="quantity">200</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="product_name">Nama barang</string>
    <string name="input_product_name">Masukkan Nama Barang</string>
    <string name="category">Kategori</string>
    <string name="date_info">Tanggal</string>
    <string name="quantity_info">Jumlah</string>
    <string name="input_quantity">Masukkan Jumlah</string>
    <string name="price">Harga</string>
    <string name="input_price">Masukkan Harga</string>
    <string name="send">Kirim</string>
    <string name="input_date">Atur Tanggal</string>
    <string name="role">Role</string>
</resources>