<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_2"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_icon_2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_productName_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_icon_2"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:text="@string/nama_product"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_totalPrice_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_icon_2"
            app:layout_constraintTop_toBottomOf="@id/tv_productName_2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            android:textSize="18sp"/>

        <View
            android:id="@+id/horizontal_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/ash_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_2"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/tv_quantity_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Quantity"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tv_quantity_2"
            app:layout_constraintTop_toBottomOf="@id/horizontal_line"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/tv_date_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/date"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_quantity_2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>